Move license service settings to appsettings.json with params (remove hardcode)

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+    "LicenseServiceSettings": {
+        "TimeOut": 5000
+    },
     "Logging": {
         "LogLevel": {
             "Default": "Information",
