Move fileName sql database to appsettings

--- a/appsettings.json
+++ b/appsettings.json
@@ -2,6 +2,9 @@
     "LicenseServiceSettings": {
         "TimeOut": 5000
     },
+    "UserDatabase": {
+        "SqlLiteFileName": "UserDatabase.db"
+    },
     "Logging": {
         "LogLevel": {
             "Default": "Information",
